Added final few changes and a requirements file Admin page, Stats, and api are left

--- a/templates/campaign.html
+++ b/templates/campaign.html
@@ -60,6 +60,7 @@
     <!-- Campaign details -->
     <div class="Campaign">
         <h1>{{ campaign.name }}</h1>
+        <p>Niche: {{ campaign.niche }}</p>
         <p>Description: {{ campaign.description }}</p>
         <p>Goals: {{ campaign.goals }}</p>
         {% if type == "Sponsor" %}
