--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -4,23 +4,8 @@
         <title>Influencer Dashboard</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
-    <body>
-        {% if "success" in error %}
-        <div class="alert alert-success" role="alert">
-            {{ error }}
-        </div>
-        {% elif error %}
-        <div class="alert alert-danger" role="alert">
-            {{ error }}
-        </div>
-        {% endif %}
-        {% if flag %}
-        <div class="alert alert-danger" role="alert">
-            You have been flagged, kindly make the below changes before your profile can be activated again.<br>
-            Reason: {{ flag.reason }}
-        </div>
-        {% endif %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <body style="margin-top:56px">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="#">Welcome {{ influencer.name }}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -48,15 +33,33 @@
             </div>
         </nav>
 
+        <!-- Error message display -->
+        {% if "success" in error %}
+        <div class="alert alert-success" role="alert">
+            {{ error }}
+        </div>
+        {% elif error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
+        <!-- Flag message display -->
+        {% if flag %}
+        <div class="alert alert-danger" role="alert">
+            You have been flagged, kindly make the below changes before your profile can be activated again.<br>
+            Reason: {{ flag.reason }}
+        </div>
+        {% endif %}
+
         <!-- Profile Page -->
         <div id="Profile">
             <h1>Welcome, {{ influencer.name }}</h1>
-            <p>Category: {{ influencer.category }}</p>
-            <p>Reach: {{ influencer.reach }}</p>
-            <p>Email: {{ influencer.email }}</p>
+            <p><b>Category</b>: {{ influencer.category }}</p>
+            <p><b>Reach</b>: {{ influencer.reach }}</p>
+            <p><b>Email</b>: {{ influencer.email }}</p>
             <p>Total Ad Requests Recieved: {{ ad_requests.total }}</p>
             <!-- Edit Profile modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editProfileModal">
+            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editProfileModal">
                 Edit Profile
             </button>
             
@@ -79,7 +82,7 @@
                             <!-- Category input -->
                             <div data-mdb-input-init class="form-outline mb-4">
                                 <select id="category" name="category" class="form-control">
-                                    <option value="{{ influencer.category }}" disabled select>{{ influencer.category }}</option>
+                                    <option value="{{ influencer.category }}" disabled selected>{{ influencer.category }}</option>
                                     <option value="Beauty">Beauty</option>
                                     <option value="Fashion">Fashion</option>
                                     <option value="Fitness">Fitness</option>
@@ -132,7 +135,7 @@
 
                             <!-- Reach input -->
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="number" id="Reach" name="reach" value="{{ influencer.reach }}" class="form-control"/>
+                                <input type="number" id="Reach" name="reach" value="{{ influencer.reach }}" class="form-control" pattern="^\d+$" min=0/>
                                 <label class="form-label" for="Reach">Reach</label>
                             </div>
                         
@@ -144,7 +147,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Save changes</button>
+                            <button type="submit" class="btn btn-success">Save changes</button>
                         </div>
                     </form>
                 </div>
@@ -155,27 +158,28 @@
         {% if not flag %}
         <!-- Ad Requests Page -->
         <div id="Ad_Requests">
-            <h1>Ad Requests</h1>
+            <h3>Ad Requests</h3>
             {% if ad_requests.items | length == 0 %}
                 <p>No Ad Requests recieved yet.</p>
+            {% else %}
+                <br>
             {% endif %}
             {% for ad_request in ad_requests.items %}
-            <br>
                 <div class="card">
                     <div class="card-header">
-                        {{ ad_request.name }}
+                        <h5>{{ ad_request.campaign.name }} <a href="{{ url_for("campaign", id=ad_request.campaign_id) }}" class="btn btn-info">View Campaign</a></h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Messages: {{ ad_request.messages }}</p>
-                        <p class="card-text">Requirements: {{ ad_request.requirements }}</p>
-                        <p class="card-text">Payment Amount: {{ ad_request.payment_amount }}</p>
+                        <p class="card-text"><b>Messages</b>: {{ ad_request.messages }}</p>
+                        <p class="card-text"><b>Requirements</b>: {{ ad_request.requirements }}</p>
+                        <p class="card-text"><b>Payment Amount</b>: {{ ad_request.payment_amount }}</p>
                         {% if not ad_request.negotiate %}
                             <!-- Revert Ad Request Button -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#revertAd{{ ad_request.id }}">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#revertAd{{ ad_request.id }}">
                                 Revert
                             </button>
                             <!-- Negotiate Ad Request Button -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#negotiateAd{{ ad_request.id }}">
+                            <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#negotiateAd{{ ad_request.id }}">
                                 Negotiate
                             </button>
                             <!-- Revert Ad Request Modal -->
@@ -189,16 +193,16 @@
                                         <div class="modal-body">
                                             <input type="hidden" name="form_id" value="revert_ad">
                                             <input type="hidden" name="id" value="{{ ad_request.id }}">
-                                            <label class="form-label">Would you like to Accept or Reject?</label>
-                                            <label class="form-label">Ad Request for Campaign {{ ad_request.name }}</label>
-                                            <label class="form-label">Messages: {{ ad_request.messages }}</label>
-                                            <label class="form-label">Requirements: {{ ad_request.requirements }}</label>
-                                            <label class="form-label">Payment Amount: {{ ad_request.payment_amount }}</label>
+                                            <label class="form-label">Would you like to Accept or Reject?</label><br>
+                                            <label class="form-label">Campaign <b>{{ ad_request.campaign.name }}</b></label><br>
+                                            <label class="form-label"><b>Messages</b>: {{ ad_request.messages }}</label><br>
+                                            <label class="form-label"><b>Requirements</b>: {{ ad_request.requirements }}</label><br>
+                                            <label class="form-label"><b>Payment Amount</b>: {{ ad_request.payment_amount }}</label><br>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                            <button type="submit" name="status" value="Accept" class="btn btn-primary">Accept</button>
-                                            <button type="submit" name="status" value="Reject" class="btn btn-primary">Reject</button>
+                                            <button type="submit" name="status" value="Accept" class="btn btn-success">Accept</button>
+                                            <button type="submit" name="status" value="Reject" class="btn btn-danger">Reject</button>
                                         </div>
                                     </form>
                                 </div>
@@ -215,27 +219,28 @@
                                         <div class="modal-body">
                                             <input type="hidden" name="form_id" value="negotiate_ad">
                                             <input type="hidden" name="id" value="{{ ad_request.id }}">
-                                            <label class="form-label">Ad Request for Campaign {{ ad_request.name }}</label>
-                                            <label class="form-label">Messages: {{ ad_request.messages }}</label>
-                                            <label class="form-label">Requirements: {{ ad_request.requirements }}</label>
+                                            <label class="form-label">Campaign <b>{{ ad_request.campaign.name }}</b></label><br>
+                                            <label class="form-label"><b>Messages</b>: {{ ad_request.messages }}</label><br>
+                                            <label class="form-label"><b>Requirements</b>: {{ ad_request.requirements }}</label>
                                             <input type="number" id="Payment_Amount" name="payment_amount" value="{{ ad_request.payment_amount }}" class="form-control" required>
                                             <label class="form-label">Payment Amount</label>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                            <button type="submit" name="status" class="btn btn-primary">Send Request</button>
+                                            <button type="submit" name="status" class="btn btn-success">Send Request</button>
                                         </div>
                                     </form>
                                 </div>
                                 </div>
                             </div>
-                        {% elif status == "Pending" %}
-                            <p>Status: {{ ad_request.status }}</p>
+                        {% elif ad_request.status == "Pending" %}
+                            <p><b>Status</b>: {{ ad_request.status }}</p>
                         {% else %}
-                            <p>Status: {{ ad_request.status }}ed</p>
+                            <p><b>Status</b>: {{ ad_request.status }}ed</p>
                         {% endif %}
                     </div>
                 </div>
+                <br>
             {% endfor %}
             <!-- Navigation section for pagination controls -->
             <nav aria-label="Page navigation example">
