--- a/templates/register_influencer.html
+++ b/templates/register_influencer.html
@@ -19,11 +19,16 @@
                                 </div>
                                 {% endif %}
                                 <h1 class="mt-5 mb-4" >Sign Up</h1>
-                                <form method="POST" onsubmit="return passMatch(event)">
+                                <form method="POST">
                                     
-                                    <label class="form-label">Only Alphabets allowed in Name and Industry Field</label>
-                                    <label class="form-label">Password must contain at least 1 uppercase letter, 1 lowercase letter, 1 number, 1 special character and be at least 8 characters long</label>
-
+                                    <ul>
+                                        <li><label class="form-label">Only Alphabets, Numbers and Underscore allowed in Name</label>
+                                        <li><label class="form-label">Password must be at least 8 characters long</label>
+                                        <li><label class="form-label">Password must contain at least 1 Uppercase and Lowercase letter</label>
+                                        <li><label class="form-label">Password must contain at least 1 Number and a Special character</label>
+                                        <li><label class="form-label">Reach must be a number greater than 0</label>
+                                    </ul>
+                                    
                                     <!-- Name input -->
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="text" name="name" id="Full_Name" class="form-control" required maxlength="45" pattern="^[a-zA-Z0-9_]+"/>
@@ -46,7 +51,6 @@
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="password" id="Con_Pass" name="con_pass" class="form-control" required minlength="8"/>
                                         <label class="form-label" for="con_pass">Confirm Password</label>
-                                        <p style="display: none;" id="noMatch">Passwords do not match</p>
                                     </div>
                                     
                                     <!-- Category input -->
@@ -123,7 +127,6 @@
                     </div>
                 </section>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-                <script src="/static/validate.js"></script>
             </body>
         </html>
         
