--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -47,6 +47,13 @@
                     {% endif %}
                 </li>
                 <li class="nav-item">
+                    {% if flag %}
+                    <a class="nav-link" disabled>Stats</a>
+                    {% else %}
+                    <a class="nav-link" href="{{ url_for('stats') }}">Stats</a>
+                    {% endif %}
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
               </ul>
