--- a/templates/search.html
+++ b/templates/search.html
@@ -146,9 +146,9 @@
                                                 {% endfor %}
                                             </select>
                                             <label class="form-label" for="Campaign">Campaign</label>
-                                            <input type="text" name="message" id="Messages" class="form-control" required maxlength=250/>
+                                            <input type="text" name="messages" id="Messages" class="form-control" required maxlength=250/>
                                             <label class="form-label" for="Messages">Messages</label>
-                                            <input type="text" name="requirement" id="Requirements" class="form-control" required maxlength=250/>
+                                            <input type="text" name="requirements" id="Requirements" class="form-control" required maxlength=250/>
                                             <label class="form-label" for="Requirements">Requirements</label>
                                             <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required min=0 pattern="^\d+$"/>
                                             <label class="form-label" for="Payment_Amount">Payment Amount</label>
