--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -470,7 +470,7 @@
                     {% if campaigns.has_prev %}
                     <li class="page-item">
                         <!-- If there is, create a link to the previous page -->
-                        <a class="page-link" href="/sponsor?page_sponsor={{ campaigns.prev_num }}">Previous</a>
+                        <a class="page-link" href="/sponsor?page_campaign={{ campaigns.prev_num }}">Previous</a>
                     </li>
                     {% else %}
                     <!-- If not, show a disabled 'Previous' button -->
@@ -484,7 +484,7 @@
                     <!-- Check if the current page is not the active page -->
                     {% if page_num != campaigns.page %}
                     <!-- Create a clickable link for the page number -->
-                    <li class="page-item"><a class="page-link" href="/sponsor?page_sponsor={{ page_num }}">{{ page_num }}</a></li>
+                    <li class="page-item"><a class="page-link" href="/sponsor?page_campaign={{ page_num }}">{{ page_num }}</a></li>
                     {% else %}
                     <!-- Highlight the current page as active and not clickable -->
                     <li class="page-item active" aria-current="page">
@@ -501,7 +501,7 @@
                     {% if campaigns.has_next %}
                     <li class="page-item">
                         <!-- If there is, create a link to the next page -->
-                        <a class="page-link" href="/sponsor?page_sponsor={{ campaigns.next_num }}">Next</a>
+                        <a class="page-link" href="/sponsor?page_campaign={{ campaigns.next_num }}">Next</a>
                     </li>
                     {% else %}
                     <!-- If not, show a disabled 'Next' button -->
